--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 
       <label for="item1">Remember Me:</label><input type="checkbox" name="item1" id="item1"><br>
 
-      <button type="submit">
-        <!-- <img src="media/images/submit.jpg" alt="Submit" height="50" width="50"> -->
-      </button>
+      <button type="submit">Submit</button>
     </form>
   </main>
 </body>
